objects/Sharing_Logger__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Sharing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner Sharing</label>
        <referenceTo>Account_Owner_Sharing__c</referenceTo>
        <relationshipLabel>Sharing Loggers</relationshipLabel>
        <relationshipName>Sharing_Loggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Sharing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Sharing</label>
        <referenceTo>Territory_Sharing__c</referenceTo>
        <relationshipLabel>Sharing Loggers</relationshipLabel>
        <relationshipName>Sharing_Loggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PT - Sharing Logger</label>
    <nameField>
        <displayFormat>TSLN-{0000000}</displayFormat>
        <label>Territory Sharing Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharing Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>